Fix horizontal overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 body, html {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
 }
 
 header {
@@ -40,7 +41,7 @@ nav button:hover {
 
 
 #main {
-    height:100vh;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: min-content;
